<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">100 национални обекта</string>
    <string name="action_settings">Настройки</string>
    <string name="hello_world">Test</string>
    <string name="some_hint">Напишете номера който търсите</string>
    <string name="some_text">100те национални обекта</string>
    <string name="title_activity_list_obekti">Списък с обекти</string>
    <string name="testButton">ListView</string>
    <string name="obektCityDesc">Град:</string>
    <string name="home_button">Начало:</string>
    <string name="obektNumberDesc">Номер:</string>
    <string name="obektNameDesc">Име:</string>
    <string name="title_activity_detailed_obekt">Информация</string>
    <string name="title_activity_site_info_fragment">SiteInfoFragment</string>
    <string name="title_activity_site_comments_fragment">SiteCommentsFragment</string>
    <string name="title_activity_sites_wiki_fragment">SitesWikiFragment</string>
    <string name="title_activity_site_events_fragment">SiteEventsFragment</string>
    <string name="work_hours_desc">Работно време:</string>
    <string name="ticket_adult_desc">Билет(възрастен):</string>
    <string name="ticket_child_desc">Билет(дете):</string>
    <string name="tour_guide_desc">Гид-цена:</string>
    <string name="get_near_sites_btn">Покажи близки обекти:</string>
    <string name="send_comment_text_btn">Изпратете коментар</string>
    <string name="comment_desc">Коментари за този обект:</string>
    <string name="events_desc">Тук може да видите предстоящи събития ако има такива:</string>
    <string name="send_comment_hint">Напишете вашият коментар тук</string>
    <string name="title_activity_visited_sites">VisitedSitesActivity</string>
    <string name="visited_sites_btn">Посетени обекти</string>
    <string name="title_activity_progress">Прогрес и класация</string>
    <string name="progress_title">Прогрес на посетените обекти и класация:</string>
    <string name="progress_ranking">Класация</string>
    <string name="progress_bar_title">Прогрес:</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="title_activity_guide">Посока към обекта</string>
    <string name="title_activity_help">HelpActivity</string>

</resources>