<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
 android:layout_width="fill_parent" android:layout_height="fill_parent"
 android:orientation="vertical"
 android:background="#FFE4C4">
 
 <TextView android:layout_width="fill_parent"
  android:layout_height="wrap_content" android:padding="10dp"
  android:text="@string/some_text" android:textSize="20sp" />
 
 <EditText android:id="@+id/myFilter" android:layout_width="match_parent"
  android:layout_height="wrap_content" android:ems="10"
  android:maxLength="3"
  android:inputType="number"
  android:hint="@string/some_hint">
 </EditText>

  <LinearLayout 
        android:orientation="horizontal" 
		android:paddingLeft="4.0dip" 
        android:paddingRight="4.0dip" 
        android:layout_width="fill_parent" android:layout_height="wrap_content">

      <Button
          android:id="@+id/getNearSites"
          android:layout_width="150dp"
          android:layout_height="70dp"
          android:background="@drawable/mybutton"
          android:text="@string/get_near_sites_btn" />

      <Button
          android:id="@+id/visitedSites"
          android:layout_width="155dp"
          android:layout_height="match_parent"
          android:background="@drawable/mybutton"
          android:text="@string/visited_sites_btn" />

    </LinearLayout> 

 
 <ListView android:id="@+id/listView1" android:layout_width="fill_parent"
  android:layout_height="fill_parent" />
 
</LinearLayout>